finish hero section with full adaptivity

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -6,7 +6,7 @@
             "3": "We Create Engineering and Software Solutions",
             "4": "Teaching Robotics and Development"
         },
-        "description": "We combine education and practice in engineering, programming, and robotics. We prepare developers, providing fundamental knowledge and skills to create modern digital solutions and pursue a successful career in IT.",
+        "description": "<strong>We</strong> combine education and practice in engineering, programming, and robotics. We prepare developers, providing fundamental knowledge and skills to create modern digital solutions and pursue a successful career in IT.",
         "learnMore": "Learn More"
     },
     "infiniteScrollText": {
