--- a/public/locales/kz/home.json
+++ b/public/locales/kz/home.json
@@ -6,7 +6,7 @@
             "3": "Инженерлік және бағдарламалық шешімдер жасаймыз",
             "4": "Робототехника мен бағдарламалауды үйретеміз"
         },
-        "description": "Біз инженерлік, бағдарламалау және робототехника салаларында білім мен практиканы біріктіреміз. Біз әзірлеушілерді дайындаймыз, заманауи цифрлық шешімдер жасауға арналған негізгі білім мен дағдылар береміз және IT саласында табысты мансапқа дайындаймыз.",
+        "description": "<strong>Біз</strong> инженерлік, бағдарламалау және робототехника салаларында білім мен практиканы біріктіреміз. Біз әзірлеушілерді дайындаймыз, заманауи цифрлық шешімдер жасауға арналған негізгі білім мен дағдылар береміз және IT саласында табысты мансапқа дайындаймыз.",
         "learnMore": "Толығырақ"
     },
     "infiniteScrollText": {
