--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -6,7 +6,7 @@
             "3": "Создаём инженерные и программные решения",
             "4": "Обучаем робототехнике и разработке"
         },
-        "description": "Мы объединяем обучение и практику в инженерии, программировании и робототехнике. Готовим разработчиков, даём фундаментальные знания и навыки для создания современных цифровых решений и успешной карьеры в IT.",
+        "description": "<strong>Мы</strong> объединяем обучение и практику в инженерии, программировании и робототехнике. Готовим разработчиков, даём фундаментальные знания и навыки для создания современных цифровых решений и успешной карьеры в IT.",
         "learnMore": "Узнать больше"
     },
     "infiniteScrollText": {
