add infinite loop carousel

--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -1,7 +1,7 @@
 {
     "hero": {
         "title": {
-            "1": "Институт Инженерных Фундаментальных технологий",
+            "1": "Институт Инженерных Фундаментальных Наук",
             "2": "Где рождаются цифровые лидеры",
             "3": "Создаём инженерные и программные решения",
             "4": "Обучаем робототехнике и разработке"
