add cta section with adaptivity, add phone input with mask, add scroll to features section form hero

--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -40,7 +40,7 @@
         "readMore": "Читать дальше"
     },
     "cta": {
-        "title": "Есть другие вопросы?\bМы с Вами свяжемся!",
+        "title": "Есть другие вопросы?\nМы с Вами свяжемся!",
         "callMeBack": "Перезвоните мне"
     }
 }
