fixed not found single conferences and news page, add single news page, add not found page, fixed adaptivity

--- a/public/locales/kz/home.json
+++ b/public/locales/kz/home.json
@@ -3,7 +3,7 @@
         "title": {
             "1": "Инженерлік Негізгі Технологиялар Институты",
             "2": "Цифрлық көшбасшылардың туу орны",
-            "3": "Инженерлік және бағдарламалық шешімдер жасаймыз",
+            "3": "Инженерлік әрі бағдарламалық шешімдер жасаймыз",
             "4": "Робототехника мен бағдарламалауды үйретеміз"
         },
         "description": "<strong>Біз</strong> инженерлік, бағдарламалау және робототехника салаларында білім мен практиканы біріктіреміз. Біз әзірлеушілерді дайындаймыз, заманауи цифрлық шешімдер жасауға арналған негізгі білім мен дағдылар береміз және IT саласында табысты мансапқа дайындаймыз.",
