add phone number sending to email, add diasbled props to button, add phone send form component and removed phone number  input component

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -41,6 +41,9 @@
     },
     "cta": {
         "title": "Have Other Questions?\nWe Will Contact You!",
+        "phoneValidation": "Please enter a valid phone number!",
+        "sent": "Your phone number has been sent successfully, we will contact you shortly!",
+        "sendError": "There was an error sending your phone number, please try again later!",
         "callMeBack": "Call Me Back"
     }
 }
