--- a/public/locales/en/notFound.json
+++ b/public/locales/en/notFound.json
@@ -1,4 +1,5 @@
 {
     "title": "Sorry, the page you are looking for was not found",
+    "underDevelopment": "Unfortunately, this page is still under development",
     "goHome": "Go Back to Home"
 }
