--- a/public/locales/kz/home.json
+++ b/public/locales/kz/home.json
@@ -41,6 +41,9 @@
     },
     "cta": {
         "title": "Басқа сұрақтарыңыз бар ма?\nБіз Сізбен байланысамыз!",
+        "phoneValidation": "Жарамды телефон нөмірін енгізіңіз!",
+        "sent": "Телефон нөміріңіз сәтті жіберілді, біз сізбен жақын арада хабарласамыз!",
+        "sendError": "Телефон нөміріңізді жіберу кезінде қате пайда болды, кейінірек қайталап көріңіз!",
         "callMeBack": "Маған қайта қоңырау шалыңыз"
     }
 }
