--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -41,6 +41,9 @@
     },
     "cta": {
         "title": "Есть другие вопросы?\nМы с Вами свяжемся!",
+        "phoneValidation": "Пожалуйста введите корректный номер телефона!",
+        "sent": "Ваш номер телефона был успешно отправлен, мы свяжемся с вами в скором времени!",
+        "sendError": "Произошла ошибка во время отправки номера телефона, пожалуйста попробуйте позже!",
         "callMeBack": "Перезвоните мне"
     }
 }
