--- a/public/locales/ru/notFound.json
+++ b/public/locales/ru/notFound.json
@@ -1,4 +1,5 @@
 {
     "title": "К сожалению, страница которую вы ищете не найдена",
+    "underDevelopment": "К сожалению, эта страница еще в разработке",
     "goHome": "Вернуться на главную"
 }
