--- a/public/locales/kz/notFound.json
+++ b/public/locales/kz/notFound.json
@@ -1,4 +1,5 @@
 {
     "title": "Өкінішке орай, іздеп отырған бетіңіз табылмады",
+    "underDevelopment": "Өкінішке орай, бұл бет әлі де құрастырылу үстінде.",
     "goHome": "Басты бетке оралу"
 }
