--- a/public/locales/kz/metadata.json
+++ b/public/locales/kz/metadata.json
@@ -1,4 +1,18 @@
 {
     "title": "Инженерлік Негізгі Технологиялар Институты",
-    "description": "Ақпараттық Негізгі Технологиялар Институты инженерлік, бағдарламалау және робототехника салаларында білім, зерттеу және тәжірибені біріктіреді. Біз әзірлеушілер мен инженерлерді дайындаймыз, инновациялық цифрлық шешімдер жасауға арналған негізгі білім мен практикалық дағдылар береміз, сондай-ақ IT және байланысты техникалық салаларда табысты мансапқа дайындаймыз. Оқу жобалар, тағылымдамалар және пән аралық тәжірибені қамтиды."
+    "description": "Ақпараттық Негізгі Технологиялар Институты инженерлік, бағдарламалау және робототехника салаларында білім, зерттеу және тәжірибені біріктіреді. Біз әзірлеушілер мен инженерлерді дайындаймыз, инновациялық цифрлық шешімдер жасауға арналған негізгі білім мен практикалық дағдылар береміз, сондай-ақ IT және байланысты техникалық салаларда табысты мансапқа дайындаймыз. Оқу жобалар, тағылымдамалар және пән аралық тәжірибені қамтиды.",
+    "pages": {
+        "home": "Инженерлік Негізгі Ғылымдар Институты",
+        "aboutUs": "Біз туралы",
+        "conferences": "Конференциялар",
+        "journals": "Журналдар",
+        "news": "Жаңалықтар"
+    },
+    "keywords": {
+         "home": "Ақпараттық Негізгі Технологиялар Институты, оқу, инженерия, бағдарламалау, робототехника",
+        "aboutUs": "Біз туралы, институт, бағыттар, білім, даму, зерттеулер",
+        "conferences": "Конференциялар, ғылыми іс-шаралар, технологиялар, инновациялар, студенттер",
+        "journals": "Журналдар, жарияланымдар, зерттеулер, мақалалар, инженерия, бағдарламалау",
+        "news": "Жаңалықтар, оқиғалар, жетістіктер, оқу, инновациялар, студенттер"
+    }
 }
