--- a/public/locales/ru/metadata.json
+++ b/public/locales/ru/metadata.json
@@ -1,4 +1,18 @@
 {
     "title": "Институт Информационных Фундаментальных Технологий",
-    "description": "Институт Информационных Фундаментальных технологий объединяет обучение, исследования и практику в инженерии, программировании и робототехнике. Мы готовим разработчиков и инженеров, даём фундаментальные знания и практические навыки для создания инновационных цифровых решений и успешной карьеры в IT и смежных технических областях. Учёба включает проекты, стажировки и междисциплинарную практику."
+    "description": "Институт Информационных Фундаментальных технологий объединяет обучение, исследования и практику в инженерии, программировании и робототехнике. Мы готовим разработчиков и инженеров, даём фундаментальные знания и практические навыки для создания инновационных цифровых решений и успешной карьеры в IT и смежных технических областях. Учёба включает проекты, стажировки и междисциплинарную практику.",
+    "pages": {
+        "home": "Институт Иженерных Фундаментальных Наук",
+        "aboutUs": "О нас",
+        "conferences": "Конференции",
+        "journals": "Журналы",
+        "news": "Новости"
+    },
+    "keywords": {
+        "home": "Институт Информационных Фундаментальных технологий, обучение, инженерия, программирование, робототехника",
+        "aboutUs": "О нас, институт, направления, образование, развитие, исследования",
+        "conferences": "Конференции, научные мероприятия, технологии, инновации, студенты",
+        "journals": "Журналы, публикации, исследования, статьи, инженерия, программирование",
+        "news": "Новости, события, достижения, обучение, инновации, студенты"
+    }
 }
