remove server.js and build zip, return metadata generation to layout, add more keywords to locales

--- a/public/locales/en/metadata.json
+++ b/public/locales/en/metadata.json
@@ -9,7 +9,7 @@
         "news": "News"
     },
     "keywords": {
-        "home": "Institute of Information Fundamental Technologies, education, engineering, programming, robotics",
+        "home": "Institute of Information Fundamental Technologies, IFES, ifes, education, engineering, programming, robotics",
         "aboutUs": "About Us, institute, directions, education, development, research",
         "conferences": "Conferences, scientific events, technology, innovation, students",
         "journals": "Journals, publications, research, articles, engineering, programming",
