--- a/public/locales/kz/metadata.json
+++ b/public/locales/kz/metadata.json
@@ -9,7 +9,7 @@
         "news": "Жаңалықтар"
     },
     "keywords": {
-         "home": "Ақпараттық Негізгі Технологиялар Институты, оқу, инженерия, бағдарламалау, робототехника",
+         "home": "Ақпараттық Негізгі Технологиялар Институты, AНТИ, анти, оқу, инженерия, бағдарламалау, робототехника",
         "aboutUs": "Біз туралы, институт, бағыттар, білім, даму, зерттеулер",
         "conferences": "Конференциялар, ғылыми іс-шаралар, технологиялар, инновациялар, студенттер",
         "journals": "Журналдар, жарияланымдар, зерттеулер, мақалалар, инженерия, бағдарламалау",
