--- a/public/locales/ru/metadata.json
+++ b/public/locales/ru/metadata.json
@@ -9,7 +9,7 @@
         "news": "Новости"
     },
     "keywords": {
-        "home": "Институт Информационных Фундаментальных технологий, обучение, инженерия, программирование, робототехника",
+        "home": "Институт Информационных Фундаментальных технологий, ИИФН, иифн, обучение, инженерия, программирование, робототехника",
         "aboutUs": "О нас, институт, направления, образование, развитие, исследования",
         "conferences": "Конференции, научные мероприятия, технологии, инновации, студенты",
         "journals": "Журналы, публикации, исследования, статьи, инженерия, программирование",
